Add back to menu button on task pages

--- a/task1.html
+++ b/task1.html
@@ -16,6 +16,7 @@
     <div class="result-info-wrapper">
       <span>Rezultat zadania wyświetlony jest w konsoli.</span>
     </div>
+    <a class="menu-link" href="/">Menu</a>
     <script>
       class StringBuilder {
         constructor(baseString = "") {
