--- a/task2.html
+++ b/task2.html
@@ -18,8 +18,8 @@
       <button type="button" data-action="create">Utwórz</button>
       <button type="button" data-action="destroy">Usuń</button>
     </div>
-
     <div id="boxes"></div>
+    <a class="menu-link" href="/">Menu</a>
     <script>
       let boxWidth = 30;
       let boxHeight = 30;
