--- a/task2.html
+++ b/task2.html
@@ -48,9 +48,11 @@
         numberInputElement.value = "";
       });
 
-      destroyButtonElement.addEventListener("click", () => {
+      destroyButtonElement.addEventListener("click", destroyBoxes);
+
+      function destroyBoxes() {
         boxesContainer.remove();
-      });
+      }
 
       function getRandomColorIntensity() {
         return Math.floor(Math.random() * 256);
