Fix cleaning number input, clear only if value is valid

--- a/task2.html
+++ b/task2.html
@@ -43,9 +43,10 @@
         const parsedMin = parseInt(numberInputElement.min);
         const parsedMax = parseInt(numberInputElement.max);
 
-        if (isValueInRange(parsedMin, parsedMax, parsedValue))
+        if (isValueInRange(parsedMin, parsedMax, parsedValue)) {
           createBoxes(parsedValue);
-        numberInputElement.value = "";
+          numberInputElement.value = "";
+        }
       });
 
       destroyButtonElement.addEventListener("click", destroyBoxes);
