Fix back to menu link

--- a/task2.html
+++ b/task2.html
@@ -19,7 +19,7 @@
       <button type="button" data-action="destroy">Usuń</button>
     </div>
     <div id="boxes"></div>
-    <a class="menu-link" href="/">Menu</a>
+    <a class="menu-link" href="index.html">Menu</a>
     <script>
       let boxWidth = 30;
       let boxHeight = 30;
