--- a/task3.html
+++ b/task3.html
@@ -23,7 +23,7 @@
       />
     </form>
     <ul id="image-container"></ul>
-    <a class="menu-link" href="/">Menu</a>
+    <a class="menu-link" href="index.html">Menu</a>
     <script src="./basicLightbox.min.js"></script>
     <script>
       let imagesPage = 1;
