--- a/task1.html
+++ b/task1.html
@@ -16,7 +16,7 @@
     <div class="result-info-wrapper">
       <span>Rezultat zadania wyświetlony jest w konsoli.</span>
     </div>
-    <a class="menu-link" href="/">Menu</a>
+    <a class="menu-link" href="index.html">Menu</a>
     <script>
       class StringBuilder {
         constructor(baseString = "") {
